--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "element-plus": "^2.2.33",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
-    "scss-loader": "^0.0.1",
     "style-loader": "^3.3.1",
     "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0",
@@ -32,7 +32,9 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
-    "element-plus": "^2.2.33",
     "webpack-merge": "^5.8.0"
+  },
+  "devDependencies": {
+    "scss-loader": "^0.0.1"
   }
 }
